moment js implimentation

--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/hl-app",
+            "outputPath": "handylib.github.io",
             "index": "projects/hl-app/src/index.html",
             "main": "projects/hl-app/src/main.ts",
             "polyfills": "projects/hl-app/src/polyfills.ts",
